[gd_scene load_steps=4 format=3 uid="uid://b1m5t7r3b6u0k"]

[ext_resource type="Theme" uid="uid://c7u2g7u3nqj0w" path="res://game/ui/theme/ui_theme.tres" id="1_theme"]
[ext_resource type="Script" uid="uid://366mgr384s5x" path="res://game/ui/character_creation/character_creation_screen.gd" id="2_script"]
[ext_resource type="PackedScene" path="res://game/entities/character/character_visual.tscn" id="3_char_vis"]

[node name="CharacterCreationScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.18039216, 0.12156863, 0.078431375, 1)

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="Center"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Center/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="Root" type="VBoxContainer" parent="Center/Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="Label" parent="Center/Panel/Margin/Root"]
layout_mode = 2
text = "Create Character"

[node name="Content" type="HBoxContainer" parent="Center/Panel/Margin/Root"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PreviewBox" type="PanelContainer" parent="Center/Panel/Margin/Root/Content"]
clip_contents = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="PreviewMargin" type="MarginContainer" parent="Center/Panel/Margin/Root/Content/PreviewBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="PreviewVisual" parent="Center/Panel/Margin/Root/Content/PreviewBox/PreviewMargin" instance=ExtResource("3_char_vis")]
unique_name_in_owner = true
scale = Vector2(3, 3)

[node name="Form" type="VBoxContainer" parent="Center/Panel/Margin/Root/Content"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="NameRow" type="HBoxContainer" parent="Center/Panel/Margin/Root/Content/Form"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="NameLabel" type="Label" parent="Center/Panel/Margin/Root/Content/Form/NameRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Name"

[node name="NameEdit" type="LineEdit" parent="Center/Panel/Margin/Root/Content/Form/NameRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Player"

[node name="SexRow" type="HBoxContainer" parent="Center/Panel/Margin/Root/Content/Form"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SexLabel" type="Label" parent="Center/Panel/Margin/Root/Content/Form/SexRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sex"

[node name="SexOption" type="OptionButton" parent="Center/Panel/Margin/Root/Content/Form/SexRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="SkinRow" type="HBoxContainer" parent="Center/Panel/Margin/Root/Content/Form"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SkinLabel" type="Label" parent="Center/Panel/Margin/Root/Content/Form/SkinRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Skin"

[node name="SkinPicker" type="ColorPickerButton" parent="Center/Panel/Margin/Root/Content/Form/SkinRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="EyeRow" type="HBoxContainer" parent="Center/Panel/Margin/Root/Content/Form"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="EyeLabel" type="Label" parent="Center/Panel/Margin/Root/Content/Form/EyeRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Eyes"

[node name="EyePicker" type="ColorPickerButton" parent="Center/Panel/Margin/Root/Content/Form/EyeRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="Center/Panel/Margin/Root/Content/Form"]
layout_mode = 2

[node name="ButtonsRow" type="HBoxContainer" parent="Center/Panel/Margin/Root/Content/Form"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="CancelButton" type="Button" parent="Center/Panel/Margin/Root/Content/Form/ButtonsRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="ConfirmButton" type="Button" parent="Center/Panel/Margin/Root/Content/Form/ButtonsRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Start"
